# nemotron-reasoning-challenge-prefix-surgery

./: .gitignore  README.md  WRITEUP.md  pyproject.toml  requirements.txt
nemotron_reasoning/: __init__.py  corpus_build.py  eval_analysis.py  inference.py  io_utils.py  make_splits.py  metric.py  paths.py  prompts.py  symbol_cipher.py  task_types.py  trace_surgeon.py  traces.py  train_worker.py  training.py
notebooks/: full_workflow.ipynb
